[package]
name = "get-data-test"
version = "0.1.0"
edition = "2024"
description = "A simple Rust program to fetch data from GitHub API and store it in a PostgreSQL database"



[dependencies]

# 异步运行时
tokio = { version = "1.0", features = ["full"] }

# HTTP 客户端
reqwest = { version = "0.11", features = ["json"] }

# 环境变量管理
dotenv = "0.15"

# PostgreSQL 连接池
deadpool-postgres = { version = "0.10", features = ["serde"] }

# PostgreSQL 客户端
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }

# 时间处理
chrono = "0.4"

# JSON 序列化/反序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 异步任务管理
futures = "0.3"
rand = "0.8.5"